--- a/composer.json
+++ b/composer.json
@@ -1,60 +1,44 @@
 {
-    "name": "psy/psysh",
-    "description": "An interactive shell for modern PHP.",
+    "name": "symfony/http-foundation",
     "type": "library",
-    "keywords": ["console", "interactive", "shell", "repl"],
-    "homepage": "http://psysh.org",
+    "description": "Defines an object-oriented layer for the HTTP specification",
+    "keywords": [],
+    "homepage": "https://symfony.com",
     "license": "MIT",
     "authors": [
         {
-            "name": "Justin Hileman",
-            "email": "justin@justinhileman.info",
-            "homepage": "http://justinhileman.com"
+            "name": "Fabien Potencier",
+            "email": "fabien@symfony.com"
+        },
+        {
+            "name": "Symfony Community",
+            "homepage": "https://symfony.com/contributors"
         }
     ],
     "require": {
-        "php": "^8.0 || ^7.4",
-        "ext-json": "*",
-        "ext-tokenizer": "*",
-        "nikic/php-parser": "^5.0 || ^4.0",
-        "symfony/console": "^7.0 || ^6.0 || ^5.0 || ^4.0 || ^3.4",
-        "symfony/var-dumper": "^7.0 || ^6.0 || ^5.0 || ^4.0 || ^3.4"
+        "php": ">=8.2",
+        "symfony/polyfill-mbstring": "~1.1",
+        "symfony/polyfill-php83": "^1.27"
     },
     "require-dev": {
-        "bamarni/composer-bin-plugin": "^1.2"
-    },
-    "suggest": {
-        "ext-pcntl": "Enabling the PCNTL extension makes PsySH a lot happier :)",
-        "ext-posix": "If you have PCNTL, you'll want the POSIX extension as well.",
-        "ext-pdo-sqlite": "The doc command requires SQLite to work."
-    },
-    "autoload": {
-        "files": ["src/functions.php"],
-        "psr-4": {
-            "Psy\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Psy\\Test\\": "test/"
-        }
-    },
-    "bin": ["bin/psysh"],
-    "config": {
-        "allow-plugins": {
-            "bamarni/composer-bin-plugin": true
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-main": "0.12.x-dev"
-        },
-        "bamarni-bin": {
-            "bin-links": false,
-            "forward-command": false
-        }
+        "doctrine/dbal": "^3.6|^4",
+        "predis/predis": "^1.1|^2.0",
+        "symfony/cache": "^6.4|^7.0",
+        "symfony/dependency-injection": "^6.4|^7.0",
+        "symfony/http-kernel": "^6.4|^7.0",
+        "symfony/mime": "^6.4|^7.0",
+        "symfony/expression-language": "^6.4|^7.0",
+        "symfony/rate-limiter": "^6.4|^7.0"
     },
     "conflict": {
-        "symfony/console": "4.4.37 || 5.3.14 || 5.3.15 || 5.4.3 || 5.4.4 || 6.0.3 || 6.0.4"
-    }
+        "doctrine/dbal": "<3.6",
+        "symfony/cache": "<6.4"
+    },
+    "autoload": {
+        "psr-4": { "Symfony\\Component\\HttpFoundation\\": "" },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
+    },
+    "minimum-stability": "dev"
 }
